# yake

./: 404.html  ANALISE_CACHE_COMPLETA.md  ANALISE_REGRESSOES_VALIDACAO.md  ANALISE_SEGTOK_OTIMIZACAO.md  BEST_PRACTICES_APPLIED.md  CHANGES.md  DASHBOARD_REAL_README.md  DASHBOARD_SUMMARY.txt  GUIA_TESTES_F1.md  LICENSE  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_RESULTS.md  PROFILING_ANALYSIS.md  QUICK_START_PR.md  README.md  RELATORIO_OTIMIZACOES_COMPLETO.md  RELATORIO_TESTES_COVERAGE.md  SLOTS_ANALYSIS.md  SUMMARY.txt  analyze_cache_deep.py  analyze_optimization_impact.py  apply_optimizations.py  apply_quick_wins.py  benchmark_20251014_174318.json  benchmark_compare.py  benchmark_extensive.py  benchmark_fidedigno.py  benchmark_optimizations.py  boas.py  calc_coverage.py  capture_composed.py  capture_expected_results.py  capture_n4.py  check_pylint.py  compare_060_vs_20.py  compare_3_versions.py  compare_boas_vs_actual.py  compare_optimizations.py  compare_versions.py  (+25 more)
backup_optimization/: composed_word.py.bak
docs/: --home.html  --home.txt  -getting-started.html  -getting-started.txt  -related-projects.html  -related-projects.txt  CONTRIBUTING.rst  about.html  about.txt
docs-site/: package-lock.json  package.json
examples/: demo_lemmatization.py  test_warning_once.py
md/: ANALISE_CACHE_COMPLETA.md  ANALISE_CRITICA_PR96.md  ANALISE_RESULTADOS_ESCALABILIDADE.md  ANALISE_VERSOES.md  CACHE_IMPACT_BENCHMARK.md  CACHE_MEMORY_ANALYSIS.md  DASHBOARD_README.md  EXPLICACAO_BUG_FROZENSET.md  OPTIMIZATION_REPORT_FINAL.md  OPTIMIZATION_REPORT_V2.md  REFATORACOES_REFERENCIA.md  RELATORIO_FINAL_CORRECAO.md  TESTE_ESCALABILIDADE_RESULTADO.md  VALIDACAO_FINAL_PR96.md  VALIDACAO_TESTES.md  analyze_differences.py  apply_quick_wins.py  benchmark_20251014_173907.json  benchmark_20251014_175905.json  benchmark_3_versions.py  benchmark_compare.py  boas.py  capture_tests.py  check_pylint.py  comprehensive_profiling.py  investigate_bug.py  (+11 more)
(+145 files in other folders)
