[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yake"
version = "0.7.0"
description = "Keyword extraction Python package"
readme = "README.md"
requires-python = ">=3.12" 
license = {text = "LGPLv3"}
authors = [
    {name = "Arian Pasquali", email = "arianpasquali@gmail.com"},
    {name = "Ricadro Campos", email = "ricardo.campos@ubi.pt"},
    {name = "Tiago Vaente", email = "tiago.leando.valente@ubi.com"},
]
dependencies = [
    "tabulate",
    "segtok",
    "networkx",
    "numpy>=1.23.5", # This version requires Python >=3.8
    "click>=6.0",
    "jellyfish",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "pylint>=3.3.0",  # Python 3.13 support
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
    "matplotlib>=3.5.0",
]
lemmatization = [
    "spacy>=3.0.0",
    "nltk>=3.8.0",
]

[project.urls]
Documentation = "https://tiagolv.github.io/yakerf/docs/--home"
Source = "https://github.com/INESCTEC/yake"

[project.scripts]
yake = "yake.cli:keywords"

[tool.hatch.build.targets.wheel]
packages = ["yake", "StopwordsList"]  # Explicitly include these packages
